NAK-842 Fixed pipeline
